@@ -19,7 +19,6 @@ import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.Matchers.equalTo;
@@ -32,7 +31,7 @@ public class LoggerImplDelegationTests extends ESTestCase {
             .filter(m -> m.getName().equals("log") == false)
             .filter(m -> Arrays.asList(m.getParameterTypes()).contains(Supplier.class) == false)
             .filter(m -> Arrays.asList(m.getParameterTypes()).contains(Level.class) == false)
-            .collect(Collectors.toList());
+            .toList();
 
         for (Method method : methods) {
             org.apache.logging.log4j.Logger log4jMock = Mockito.mock(org.apache.logging.log4j.Logger.class);
@@ -50,7 +49,7 @@ public class LoggerImplDelegationTests extends ESTestCase {
     private Method findDelegatedMethodInLog4j(Method esMethod) {
         List<Method> collect = getPublicMethods(org.apache.logging.log4j.Logger.class).filter(m -> m.getName().equals(esMethod.getName()))
             .filter(m -> Arrays.equals(m.getParameterTypes(), esMethod.getParameterTypes()))
-            .collect(Collectors.toList());
+            .toList();
         assertThat(collect.size(), equalTo(1));
         return collect.get(0);
     }
