@@ -257,10 +257,8 @@ public class NodeDeprecationChecks {
             return null;
         }
 
-        List<String> deprecatedNodeSettingKeys = deprecatedConcreteNodeSettings.stream().map(Setting::getKey).collect(Collectors.toList());
-        List<String> deprecatedClusterSettingKeys = deprecatedConcreteClusterSettings.stream()
-            .map(Setting::getKey)
-            .collect(Collectors.toList());
+        List<String> deprecatedNodeSettingKeys = deprecatedConcreteNodeSettings.stream().map(Setting::getKey).toList();
+        List<String> deprecatedClusterSettingKeys = deprecatedConcreteClusterSettings.stream().map(Setting::getKey).toList();
 
         final String concatSettingNames = Stream.concat(deprecatedNodeSettingKeys.stream(), deprecatedClusterSettingKeys.stream())
             .distinct()
@@ -289,10 +287,10 @@ public class NodeDeprecationChecks {
     ) {
         List<Setting<Settings>> deprecatedConcreteNodeSettings = deprecatedAffixSetting.getAllConcreteSettings(nodeSettings)
             .sorted(Comparator.comparing(Setting::getKey))
-            .collect(Collectors.toList());
+            .toList();
         List<Setting<Settings>> deprecatedConcreteClusterSettings = deprecatedAffixSetting.getAllConcreteSettings(clusterSettings)
             .sorted(Comparator.comparing(Setting::getKey))
-            .collect(Collectors.toList());
+            .toList();
 
         if (deprecatedConcreteNodeSettings.isEmpty() && deprecatedConcreteClusterSettings.isEmpty()) {
             return null;
@@ -310,14 +308,14 @@ public class NodeDeprecationChecks {
             Settings groupSettings = affixSetting.get(nodeSettings);
             Set<String> subSettings = groupSettings.keySet();
             return subSettings.stream().map(key -> groupPrefix + key).collect(Collectors.toList());
-        }).flatMap(List::stream).sorted().collect(Collectors.toList());
+        }).flatMap(List::stream).sorted().toList();
 
         List<String> allClusterSubSettingKeys = deprecatedConcreteClusterSettings.stream().map(affixSetting -> {
             String groupPrefix = affixSetting.getKey();
             Settings groupSettings = affixSetting.get(clusterSettings);
             Set<String> subSettings = groupSettings.keySet();
             return subSettings.stream().map(key -> groupPrefix + key).collect(Collectors.toList());
-        }).flatMap(List::stream).sorted().collect(Collectors.toList());
+        }).flatMap(List::stream).sorted().toList();
 
         final String allSubSettings = Stream.concat(allNodeSubSettingKeys.stream(), allClusterSubSettingKeys.stream())
             .distinct()
