@@ -14,7 +14,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.ml.job.process.normalizer.Normalizable.ChildType.BUCKET_INFLUENCER;
 
@@ -112,10 +111,7 @@ public class BucketNormalizable extends Normalizable {
         List<Normalizable> children = new ArrayList<>();
         switch (type) {
             case BUCKET_INFLUENCER -> children.addAll(
-                bucket.getBucketInfluencers()
-                    .stream()
-                    .map(bi -> new BucketInfluencerNormalizable(bi, getOriginatingIndex()))
-                    .collect(Collectors.toList())
+                bucket.getBucketInfluencers().stream().map(bi -> new BucketInfluencerNormalizable(bi, getOriginatingIndex())).toList()
             );
             default -> throw new IllegalArgumentException("Invalid type: " + type);
         }
